[DungTVHE140366]:fix bug room enable